<resources>
    <string name="app_name">CodeBase</string>
    <string name="action_settings">Settings</string>
    <string name="float_desc">Just Float</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="case_item">Demo Case</string>
    <string name="lam_click">Click Me</string>
    <string name="channel_name">NotificationChannel</string>
    <string name="channel_id">ChannelID</string>
    <string name="channel_description">ChannelDesc</string>
    <string name="notification_title">NotificationTittle</string>
    <string name="notification_message">NotificationMessage</string>
    <string name="ticker_text">NotificationText</string>
    <string name="normal_case">Normal Case</string>
    <string name="close_case">Close Case</string>
    <string name="send_case">Send</string>
    <string name="send_finish">Send Finish</string>
    <string name="producer_case">Producer</string>
    <string name="action">Long Screen Short</string>

</resources>