<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".coroutine.channel.ChannelActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/normal_case"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/normal_case" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_case"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/close_case" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_case"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/send_case" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_finish"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/send_finish" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/producer_case"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/producer_case" />


</LinearLayout>